[metadata]
name = velican
version = 0.1

[options]
packages = velican
install_requires =
    acme-tiny
    jinja2
    htpasswd
include_package_data = True

[options.data_files]
data =
    velican/conf/nginx.conf
    velican/conf/nginx.path
    velican/conf/nginx.webdav
    velican/conf/systemd.service
    velican/conf/systemd.template
    velican/conf/systemd.timer

[options.entry_points]
console_scripts =
    velican = velican.__main__:main