[metadata]
name = velican
version = 0.1

[options]
packages = velican
install_requires =
    pelican
    jinja2
    typogrify
    flask

include_package_data = True

[options.data_files]
data/velican/conf =
    velican/conf/pelicanconf.py
    velican/conf/previewconf.py
    velican/conf/publishconf.py

[options.entry_points]
console_scripts =
    velican = velican.cli:main